2011-03-28  Vsevolod Vlasov  <vsevik@chromium.org>

Reviewed by Pavel Feldman.

        [Chromium] Inspector does not always shows transferred size correctly (e.g. gzipped/chunked content)
        https://bugs.webkit.org/show_bug.cgi?id=56602

        Added new methods to interface while keeping the old ones to keep
        chromium working until it is also patched.

        * public/WebDevToolsAgent.h:
        * public/WebURLLoaderClient.h:
        (WebKit::WebURLLoaderClient::didReceiveData):
        * src/AssociatedURLLoader.cpp:
        (WebKit::AssociatedURLLoader::ClientAdapter::didReceiveData):
        * src/ResourceHandle.cpp:
        (WebCore::ResourceHandleInternal::didReceiveData):
        * src/WebDevToolsAgentImpl.cpp:
        (WebKit::WebDevToolsAgentImpl::didReceiveData):
        * src/WebDevToolsAgentImpl.h:

Canonical link: https://commits.webkit.org/71997@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@82195 268f45cc-cd09-0410-ab3c-d52691b4dbfc