Source/WebKit/chromium/src/AssociatedURLLoader.cpp
@@ -119,13 +119,14 @@ void AssociatedURLLoader::ClientAdapter::didReceiveResponse(const ResourceRespon
     m_client->didReceiveResponse(m_loader, wrappedResponse);
 }
 
-void AssociatedURLLoader::ClientAdapter::didReceiveData(const char* data, int lengthReceived)
+void AssociatedURLLoader::ClientAdapter::didReceiveData(const char* data, int dataLength)
 {
     if (!m_client)
         return;
 
-    m_client->didReceiveData(m_loader, data, lengthReceived);
-    m_downloadLength += lengthReceived;
+    // FIXME(vsevik): add -1 to params once migrated.
+    m_client->didReceiveData(m_loader, data, dataLength);
+    m_downloadLength += dataLength;
 }
 
 void AssociatedURLLoader::ClientAdapter::didReceiveCachedMetadata(const char* data, int lengthReceived)
