Source/WebKit/chromium/src/WebDevToolsAgentImpl.cpp
@@ -274,9 +274,15 @@ void WebDevToolsAgentImpl::willSendRequest(unsigned long resourceId, WebFrame* w
     InspectorInstrumentation::willSendRequest(mainFrame(), resourceId, loader, request.toMutableResourceRequest(), ResourceResponse());
 }
 
+// FIXME(vsevik): remove once not used downstream
 void WebDevToolsAgentImpl::didReceiveData(unsigned long resourceId, int length)
 {
-    InspectorInstrumentation::didReceiveContentLength(mainFrame(), resourceId, length, -1);
+    didReceiveData(resourceId, length, -1);
+}
+
+void WebDevToolsAgentImpl::didReceiveData(unsigned long resourceId, int length, int lengthReceived)
+{
+    InspectorInstrumentation::didReceiveContentLength(mainFrame(), resourceId, length, lengthReceived);
 }
 
 void WebDevToolsAgentImpl::didReceiveResponse(unsigned long resourceId, const WebURLResponse& response)
